<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivMap"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.RoundedCornerImageView"
            app:srcCompat="@drawable/map_one" />

        <ImageView
            android:id="@+id/ivStartDot"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/bg_start_dot"
            app:layout_constraintEnd_toEndOf="@id/guidelineStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvPickUpValue"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivEndDot"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/bg_end_dot"
            app:layout_constraintBottom_toBottomOf="@id/tvDropOffValue"
            app:layout_constraintEnd_toEndOf="@id/guidelineStart"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="3dp"
            android:layout_height="0dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="11dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/ivEndDot"
            app:layout_constraintEnd_toEndOf="@id/guidelineStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivStartDot" />

        <TextView
            android:id="@+id/tvPickUpLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_pick_up_point"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/ivMap" />

        <TextView
            android:id="@+id/tvPickUpValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:includeFontPadding="false"
            android:text="@string/label_address_example"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toStartOf="@id/tvPickUpTime"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvPickUpLabel" />

        <TextView
            android:id="@+id/tvPickUpTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:text="@string/label_time_example"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/tvPickUpValue"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvDropOffLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_drop_off_point"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvPickUpValue" />

        <TextView
            android:id="@+id/tvDropOffValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:includeFontPadding="false"
            android:text="@string/label_address_example"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toStartOf="@id/tvDropOffTime"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvDropOffLabel" />

        <TextView
            android:id="@+id/tvDropOffTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:text="@string/label_time_example"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@id/tvDropOffValue"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="56dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>